# MerakEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  game_engine.sln  generate.py
engine/: CMakeLists.txt
engine/src/runtime/: CMakeLists.txt  engine.cpp  engine.h  main.cpp
engine/src/runtime/core/math/: math.cpp  math.h
engine/src/runtime/function/framework/component/: component_system.cpp  component_system.h
engine/src/runtime/function/framework/event/: event_manager.cpp  event_manager.h
engine/src/runtime/function/framework/world/: QuadTree.txt  world_manager.cpp  world_manager.h
engine/src/runtime/function/global/: global_context.cpp  global_context.h
engine/src/runtime/function/input/: input_system.cpp  input_system.h
engine/src/runtime/function/physics/: physics_manager.cpp  physics_manager.h
engine/src/runtime/function/render/: render_math.cpp  render_math.h  render_pipeline.cpp  render_pipeline.h  render_system.cpp  render_system.h
engine/src/runtime/function/render/backend/: CMakeLists.txt  VulkanBase.cpp  VulkanBase.h
engine/src/runtime/function/render/backend/asset/: VulkanAsset.cpp  VulkanAsset.h
engine/src/runtime/function/render/backend/common/: VulkanCommon.cpp
engine/src/runtime/function/render/backend/control/: VulkanCamera.cpp  VulkanCamera.h
engine/src/runtime/function/render/backend/initialization/: VulkanDevice.h
engine/src/runtime/function/render/backend/rendering/: VulkanPipeline.cpp  VulkanPipeline.h
engine/src/runtime/function/render/backend/resource/: VulkanResource.cpp  VulkanResource.h
engine/src/runtime/resource/: asset_manager.cpp  asset_manager.h
game_engine.xcodeproj/: project.pbxproj
game_engine.xcodeproj/xcshareddata/xcschemes/: game_engine.xcscheme
resources/: game.config  rendering.config
resources/actor_templates/: BouncyBox.template  Fireball.template  KinematicBox.template  Player.template  Projectile.template  RedX.template  Speaker.template  VictoryBox.template  enemy.template  falling_box.template
resources/component_types/: CameraControl.lua  CameraManager.lua  ModelRenderer.lua
resources/models/bonfire_scene/: license.txt  scene.gltf
resources/scenes/: test.scene
resources/shaders/: light.frag  light.frag.spv  light.vert  light.vert.spv  offscreen.frag  offscreen.frag.spv  offscreen.vert  offscreen.vert.spv  pcss.frag  pcss.frag.spv
